--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
               <td class="basket-item">
                 <h3 class="basket-item-title">Пломбир с апельсиновым джемом</h3>
                 <button class="button" type="button">Удалить товар</button>
-                <img class="basket-item-img" src="http://placehold.it/50x50" alt="первый товар">
+                <img class="basket-item-img" src="img/item-1.jpg" width= "33" height="33" alt="Сливочное с апельсиновым джемом">
               </td>
               <td class="basket-item">1,5 кг ×
                 <span class="basket-item">200 руб.</span>
@@ -85,7 +85,7 @@
               <td class="basket-item">
                 <h3 class="basket-item-title">Клубничный пломбир с присыпкой из белого шоколада</h3>
                 <button class="button" type="button">Удалить товар</button>
-                <img class="basket-item-img" src="http://placehold.it/50x50" alt="второй товар">
+                <img class="basket-item-img" src="img/item-3.jpg" width= "33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
               </td>
               <td class="basket-item">1,5 кг ×
                 <span class="basket-item">200 руб.</span>
@@ -126,7 +126,7 @@
       <h2 class="visually-hidden">Каталог мороженого</h2>
       <ul class="offers-list">
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-1.jpg" width= "267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <span class="item-price">310</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -135,7 +135,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-2.jpg" width= "267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           <span class="item-price">380</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -144,7 +144,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-3.jpg" width= "267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           <span class="item-price">355</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -153,7 +153,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-4.jpg" width= "267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
           <span class="item-price">415</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -162,7 +162,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-5.jpg" width= "267" height="267" alt="Сливочное с брусничным джемом">
           <span class="item-price">325</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -171,7 +171,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-6.jpg" width= "267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
           <span class="item-price">410</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -180,7 +180,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-7.jpg" width= "267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
           <span class="item-price">375</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -189,7 +189,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-8.jpg" width= "267" height="267" alt="Сливочное с шоколадной стружкой">
           <span class="item-price">320</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -198,7 +198,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-9.jpg" width= "267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
           <span class="item-price">440</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -207,7 +207,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-10.jpg" width= "267" height="267" alt="Сливочноe с ментоловым сиропом">
           <span class="item-price">435</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -216,7 +216,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-11.jpg" width= "267" height="267" alt="Сливочное с кусочками черного шоколада">
           <span class="item-price">420</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
@@ -225,7 +225,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="мороженое">
+          <img src="img/item-12.jpg" width= "267" height="267" alt="Сливочное с мятным сиропом">
           <span class="item-price">355</span>
           <span class="item-weight">/кг</span>
           <a href="catalog.html">
