--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="main-header">
     <div class="main-header-logo">
-      <img src="http://placehold.it/150x100" alt="Логотип магазина">
+      <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина">
     </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
@@ -75,6 +75,24 @@
     </div>
   </header>
   <!-- <section class="slider">Тут будет слайдер</section> -->
+  <section class="slider">
+    <h2 class="visually-hidden">Витрина мороженного</h2>
+    <div class="slider-current">
+      <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+      <img src="img/slider-1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
+      <a class="button slider-button" href="#">Давайте оба!</a>
+    </div>
+    <div class="slider-current">
+      <h3>Шоколадный пломбир и лимонный сорбет</h3>
+      <img src="img/slider-2.png" width="1045" height="881" alt="Шоколадный пломбир и лимонный сорбет">
+      <a class="button slider-button" href="#">Давайте оба!</a>
+    </div>
+    <div class="slider-current">
+      <h3>Пломбир с помадкой и клубничный щербет</h3>
+      <img src="img/slider-3.png" width="1045" height="881" alt="Пломбир с помадкой и клубничный щербет">
+      <a class="button slider-button" href="#">Давайте оба!</a>
+    </div>
+  </section>
   <main class="container">
     <h1 class="visually-hidden">Магазин "Глейси"</h1>
     <section class="deals">
@@ -94,7 +112,7 @@
       <h2 class="visually-hidden">Хиты продаж</h2>
       <ul>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <img src="img/item-1.jpg" width= "267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <span class="item-price">310</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -103,7 +121,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="Сливочно-кофейное с кусочками шоколада">
+          <img src="img/item-2.jpg" width= "267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           <span class="item-price">380</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -112,7 +130,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <img src="img/item-3.jpg" width= "267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           <span class="item-price">355</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -121,7 +139,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="http://placehold.it/150x100" alt="Сливочное крем-брюле с карамельной подливкой">
+          <img src="img/item-4.jpg" width= "267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
           <span class="item-price">415</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
