--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
               <td class="basket-item">
                 <h3 class="basket-item-title">Пломбир с апельсиновым джемом</h3>
                 <button class="button" type="button">Удалить товар</button>
-                <img class="basket-item-img" src="img/item-1.jpg" width= "33" height="33" alt="Сливочное с апельсиновым джемом">
+                <img class="basket-item-img" src="img/item-1.jpg" width= "33" height="33" alt="Пломбир с апельсиновым джемом">
               </td>
               <td class="basket-item">1,5 кг ×
                 <span class="basket-item">200 руб.</span>
