--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <a href="catalog.html">Каталог</a>
           <ul class="site-navigation-list">
             <li class="site-navigation-list-item">
-              <a href="#"><b>Новинки</b></a>
+              <a href="#">
+                <b>Новинки</b>
+              </a>
             </li>
             <li class="site-navigation-list-item">
               <a href="catalog.html">Сливочное</a>
@@ -55,14 +57,16 @@
         <a class="login-link" href="#">Вход</a>
         <form class="user-navigation-login" action="https://echo.htmlacademy.ru" method="post">
           <p>
-          <label class="visually-hidden" for="entry-email">Электронная почта</label>
-          <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта" tabindex="0" required>
-        </p>
-        <p>
-          <label class="visually-hidden" for="entry-password">Пароль</label>
-          <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль" tabindex="0" required>
-        </p>
-          <button class="button-enter">Войти</button>
+            <label class="visually-hidden" for="entry-email">Электронная почта</label>
+            <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта" tabindex="0"
+              required>
+          </p>
+          <p>
+            <label class="visually-hidden" for="entry-password">Пароль</label>
+            <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль" tabindex="0"
+              required>
+          </p>
+          <button class="button-enter" tabindex="0">Войти</button>
           <p class="user-navigation-links">
             <a href="#">Забыли пароль?</a>
             <a href="#">Новая регистрация</a>
@@ -81,7 +85,6 @@
       <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
     </div>
   </header>
-  <!-- <section class="slider">Тут будет слайдер</section> -->
   <section class="slider">
     <h2 class="visually-hidden">Витрина мороженного</h2>
     <div class="slider-current">
@@ -99,6 +102,15 @@
       <img src="img/slider-3.png" width="1045" height="881" alt="Пломбир с помадкой и клубничный щербет">
       <a class="button slider-button" href="#">Давайте оба!</a>
     </div>
+    <label>
+      <input type="radio" name="slider" value="product-1" checked>
+    </label>
+    <label>
+      <input type="radio" name="slider" value="product-2">
+    </label>
+    <label>
+      <input type="radio" name="slider" value="product-3">
+    </label>
   </section>
   <main class="container">
     <h1 class="visually-hidden">Магазин "Глейси"</h1>
@@ -119,7 +131,7 @@
       <h2 class="visually-hidden">Хиты продаж</h2>
       <ul>
         <li class="offers-item">
-          <img src="img/item-1.jpg" width= "267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <span class="item-price">310</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -128,7 +140,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="img/item-2.jpg" width= "267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+          <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           <span class="item-price">380</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -137,7 +149,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="img/item-3.jpg" width= "267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           <span class="item-price">355</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -146,7 +158,7 @@
           <a class="offers-btn" href="#">Быстрый просмотр</a>
         </li>
         <li class="offers-item">
-          <img src="img/item-4.jpg" width= "267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+          <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
           <span class="item-price">415</span>
           <span class="item-weight">/кг</span>
           <h3 class="offers-title">
@@ -160,21 +172,21 @@
       <h2 class="visually-hidden">Преимущества</h2>
       <h3>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
       <ul class="features-list">
-        <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием
-          современного оборудования и проверенных временем технологий.</li>
-        <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с
-          которыми нас связывает долговременное сотрудничество.</li>
-        <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
-          дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-        <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не
-          дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+        <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных
+          временем технологий.</li>
+        <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+          долговременное сотрудничество.</li>
+        <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты
+          и добавки произведены из натурального, экологически чистого сырья.</li>
+        <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять
+          в пути и позволяет сохранить превосходный вкус.</li>
       </ul>
     </section>
     <div class="blog-news-wrapper">
-      <section class="news">
+      <article class="news">
         <h2>Новое в нашем блоге</h2>
         <a href="index.html">10 способов сервировки фруковых щербетов к столу</a>
-      </section>
+      </article>
       <section class="subscription-form">
         <h2 class="visually-hidden">Подписка</h2>
         <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
@@ -195,15 +207,19 @@
       <section class="address">
         <h3 class="visually-hidden">Адрес офиса</h3>
         <p>
-          Адрес главного офиса<br>
-          и офлайн магазина:<br>
-          <b>ул.Большая Конюшенная</b><br>
-          <b>19/8, Санкт-Петербург</b><br>
+          Адрес главного офиса
+          <br> и офлайн магазина:
+          <br>
+          <b>ул.Большая Конюшенная</b>
+          <br>
+          <b>19/8, Санкт-Петербург</b>
+          <br>
         </p>
         <p>
-          Для заказов по телефону:<br>
-          <b>8 812 450-24-25</b><br>
-          (с 10 до 20 ежедневно)
+          Для заказов по телефону:
+          <br>
+          <b>8 812 450-24-25</b>
+          <br> (с 10 до 20 ежедневно)
         </p>
         <a class="button-feedback" href="index.html">Форма обратной связи</a>
       </section>
@@ -250,7 +266,7 @@
     </ul>
     <p class="footer-copyright">
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="http://placehold.it/150x100" alt="Логотип HTML Academy">
+        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
       </a>
       Сделано в HTML Academy ©2017
     </p>
@@ -262,18 +278,18 @@
         <img src="img/cross-big.svg" width="18" height="17" alt="Закрыть">
       </button>
       <p class="feedback-item">
-      <label class="visually-hidden" for="feedback-name">Имя</label>
-      <input class="feedback-input" type="text" id="feedback-name" placeholder="Как вас зовут?" required>
-    </p>
-    <p class="feedback-item">
-      <label class="visually-hidden" for="feedback-email">Электронная почта</label>
-      <input class="feedback-input" type="email" id ="feedback-email" placeholder="Ваша почта для ответа?" required>
-    </p>
-    <p class="feedback-item">
-    <label class="visually-hidden" for="feedback-text">Напишите что-нибудь</label>
-      <textarea class="feedback-input-textarea"  id="feedback-text" rows="6" placeholder="Напишите что-нибудь..." required></textarea>
-    </p>
-      <button class="feedback-btn">Отправить</button>
+        <label class="visually-hidden" for="feedback-name">Имя</label>
+        <input class="feedback-input" type="text" id="feedback-name" placeholder="Как вас зовут?" tabindex="0" required>
+      </p>
+      <p class="feedback-item">
+        <label class="visually-hidden" for="feedback-email">Электронная почта</label>
+        <input class="feedback-input" type="email" id="feedback-email" placeholder="Ваша почта для ответа?" tabindex="0" required>
+      </p>
+      <p class="feedback-item">
+        <label class="visually-hidden" for="feedback-text">Напишите что-нибудь</label>
+        <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..." tabindex="0" required></textarea>
+      </p>
+      <button class="feedback-btn" tabindex="0">Отправить</button>
     </form>
   </div>
 </body>
